--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "spotify-api.js",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "A complete node js wrapper of spotify api with oauth support",
   "main": "dist/index.js",
-  "types":"dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build":"tsc"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
-    "url":"https://github.com/abh80/spotify-api.js"
+    "url": "https://github.com/abh80/spotify-api.js"
   },
   "homepage": "https://github.com/abh80/spotify-api.js#spotifyjs",
-  "keywords": ["spotify-api","spotify","spotify-oauth","spotifyapi","spotify-api-wrapper"],
+  "keywords": [
+    "spotify-api",
+    "spotify",
+    "spotify-oauth",
+    "spotifyapi",
+    "spotify-api-wrapper"
+  ],
   "author": "Abh80",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
-    "spotify-url-info": "^1.3.1"
+    "spotify-url-info": "^1.3.1",
+    "hex-rgb":"^4.1.0"
   }
 }
