--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotify-api.js",
-  "version": "2.2.0",
+  "version": "2.5.0",
   "description": "A complete node js wrapper of spotify api with oauth support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -23,7 +23,6 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
-    "spotify-url-info": "^1.3.1",
-    "hex-rgb": "^4.1.0"
+    "spotify-url-info": "^1.3.1"
   }
 }
