--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotify-api.js",
-  "version": "2.7.1",
+  "version": "3.0.0",
   "description": "A complete node js wrapper of spotify api with oauth support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,20 +9,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/abh80/spotify-api.js"
+    "url": "https://github.com/spotify-api/spotify-api.js"
   },
-  "homepage": "https://github.com/abh80/spotify-api.js#spotifyjs",
+  "homepage": "https://github.com/spotify-api/spotify-api.js#spotifyjs",
   "keywords": [
     "spotify-api",
     "spotify",
     "spotify-oauth",
     "spotifyapi",
-    "spotify-api-wrapper"
+    "spotify-api-wrapper",
+    "spotify.js"
   ],
   "author": "Abh80",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.2",
-    "spotify-uri-info": "https://github.com/abh80/spotify-uri-info.git"
+    "axios": "^0.19.2"
   }
 }
