--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "Abh80",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.2",
-    "cheerio": "^1.0.0-rc.3"
+    "@spotify-api.js/spotify-uri-info": "^1.0.0",
+    "axios": "^0.19.2"
   }
 }
