--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
   "dependencies": {
     "@spotify-api.js/spotify-uri-info": "^1.0.0",
     "axios": "^0.20.0"
-  }
+  },
+  "contributors": [
+    {
+      "name":"science_spot_codes",
+      "url":"https://decimaldev.xyz",
+      "email": "decimaldev01@gmail.com"
+    }
+  ]
 }
