--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotify-api.js",
-  "version": "4.0.2",
+  "version": "4.0.5",
   "description": "A complete node js wrapper of spotify api with oauth support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,7 +19,9 @@
     "spotify-oauth",
     "spotifyapi",
     "spotify-api-wrapper",
-    "spotify.js"
+    "spotify.js",
+    "spotify-cli",
+    "spotify-cli.js"
   ],
   "author": "Abh80",
   "license": "MIT",
