--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "spotify-api.js",
-  "version": "4.1.0",
+  "version": "5.0.0",
   "description": "A complete node js wrapper of spotify api with oauth support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "test": "node test/index.js",
-    "doc": "node doc-gen.js"
+    "doc": "node doc-gen.js",
+    "host": "node test/host.js",
+    "auth": "node test/auth.js"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,8 @@
   "license": "MIT",
   "dependencies": {
     "@spotify-api.js/spotify-uri-info": "^1.0.0",
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "events": "^3.2.0"
   },
   "contributors": [
     {
@@ -38,6 +41,7 @@
     }
   ],
   "devDependencies": {
+    "express": "^4.17.1",
     "fs": "0.0.1-security"
   }
 }
