--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "events": "^3.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "gh-pages": "^3.1.0",
     "showdown": "^1.9.1"
   }
 }
