--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "https://github.com/spotify-api/spotify-api.js"
   },
-  "homepage": "https://spotifyjs.fastdocs.tk",
+  "homepage": "https://spotify-api.js.org",
   "keywords": [
     "spotify-api",
     "spotify",
