--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "gh-pages": "^3.1.0",
+    "lodash": "^4.17.20",
     "showdown": "^1.9.1"
   }
 }
