--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
         "strict": true
     },
     "include": ["src"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "types", "dist"]
 }
