--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "lib": ["es2018", "dom"],
         "rootDir": "./src",
         "outDir": "./dist",
-        "strict": false
+        "strict": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "types", "dist"]
