--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.35"
+    "@types/node": "^14.14.35",
+    "express": "^4.17.1",
+    "fs": "^0.0.1-security"
   }
 }
