--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
   "name": "spotify-api.js",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "8.0.0",
+  "description": "A complete node js wrapper of spotify api with oauth support",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npx tsc --project tsconfig.json"
+    "build": "npx tsc --project tsconfig.json",
+    "test": "node test/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/spotify-api/spotify-api.js"
+  },
+  "homepage": "https://github.com/spotify-api/spotify-api.js#readme",
+  "keywords": [
+    "spotify-api",
+    "spotify",
+    "spotify-oauth",
+    "spotifyapi",
+    "spotify-api-wrapper",
+    "spotify.js"
+  ],
+  "author": "Abh80",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1"
   },
