--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotify-api.js",
-  "version": "8.0.0",
+  "version": "8.1.0",
   "description": "A complete node js wrapper of spotify api with oauth support",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -27,7 +27,7 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@types/node": "^15.0.0",
+    "@types/node": "15.12.4",
     "express": "^4.17.1",
     "fs": "^0.0.1-security"
   }
