docs: moved to typedoc.

--- a/package.json
+++ b/package.json
@@ -27,16 +27,11 @@
         "axios": "^0.21.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.15.0",
-        "@babel/preset-env": "^7.15.0",
-        "@babel/preset-typescript": "^7.15.0",
         "@types/node": "16.4.12",
-        "discord.js-docgen": "github:discordjs/docgen#ts-patch",
-        "express": "^4.17.1",
-        "jsdoc-babel": "^0.5.0"
+        "express": "^4.17.1"
     },
     "scripts": {
-        "docs": "node node_modules/discord.js-docgen --jsdoc jsdoc.json --verbose --source src/*.ts src/**/*.ts --custom docs/index.yml --output docs/docs.json",
+        "docs": "npx typedoc --entryPoints src/index.ts --json docs/docs.json",
         "build": "npx tsc --project tsconfig.json",
         "test": "node test"
     }
