--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     },
     "devDependencies": {
         "@types/node": "16.4.12",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "typescript": "^4.3.5"
     },
     "scripts": {
         "docs": "npx typedoc --entryPoints src/index.ts --json docs/docs.json",
