fix: updated [package.json].

--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "devDependencies": {
         "@types/node": "16.4.12",
         "express": "^4.17.1",
+        "typedoc": "^0.21.6",
         "typescript": "^4.3.5"
     },
     "scripts": {
         "docs": "npx typedoc --entryPoints src/index.ts --json docs/docs.json",
+        "docs:types": "npx typedoc --entryPoints apiTypes/typings/index.ts --json docs/typings.json",
         "build": "npx tsc --project tsconfig.json",
         "build:types": "cd apiTypes && npx tsc --project tsconfig.json",
         "test": "node test"
