--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-    "name": "spotify-api.js",
-    "version": "9.2.5",
-    "description": "A complete node js wrapper of spotify api with oauth support",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "files": [
-        "dist"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/spotify-api/spotify-api.js"
-    },
-    "homepage": "https://github.com/spotify-api/spotify-api.js#readme",
-    "readme": "https://github.com/spotify-api/spotify-api.js#readme",
-    "keywords": [
-        "spotify",
-        "spotify.js",
-        "spotifyapi",
-        "spotify-api",
-        "spotify-oauth",
-        "spotify-api.js",
-        "spotify-api-wrapper"
-    ],
-    "author": "Abh80",
-    "license": "MIT",
-    "dependencies": {
-        "axios": "^1.1.3",
-        "spotify-types": "^1.0.0"
-    },
-    "devDependencies": {
-        "@types/node": "18.11.18",
-        "express": "^4.17.1",
-        "typedoc": "^0.23.7",
-        "typescript": "^4.3.5"
-    },
-    "scripts": {
-        "docs": "npx typedoc --entryPoints src/index.ts --json docs/docs.json",
-        "docs:types": "npx typedoc --entryPoints apiTypes/typings/index.d.ts --json docs/typings.json",
-        "build": "npx tsc --project tsconfig.json",
-        "build:types": "cd apiTypes && npx tsc --project tsconfig.json",
-        "test": "node test"
-    }
+	"name": "spotify-api.js",
+	"version": "9.2.5",
+	"description": "A complete node js wrapper of spotify api with oauth support",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"type": "module",
+	"files": [
+		"dist"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/spotify-api/spotify-api.js"
+	},
+	"homepage": "https://github.com/spotify-api/spotify-api.js#readme",
+	"readme": "https://github.com/spotify-api/spotify-api.js#readme",
+	"keywords": [
+		"spotify",
+		"spotify.js",
+		"spotifyapi",
+		"spotify-api",
+		"spotify-oauth",
+		"spotify-api.js",
+		"spotify-api-wrapper"
+	],
+	"author": "Abh80",
+	"license": "MIT",
+	"dependencies": {
+		"axios": "^1.1.3",
+		"spotify-types": "^1.0.0"
+	},
+	"devDependencies": {
+		"@types/node": "20.11.20",
+		"@typescript-eslint/eslint-plugin": "^7.0.2",
+		"@typescript-eslint/parser": "^7.0.2",
+		"eslint": "^8.57.0",
+		"express": "^4.17.1",
+		"prettier": "^3.2.5",
+		"typedoc": "^0.25.8",
+		"typescript": "^5.3.3"
+	},
+	"scripts": {
+		"docs": "npx typedoc --entryPoints src/index.ts --json docs/docs.json",
+		"docs:types": "npx typedoc --entryPoints apiTypes/typings/index.d.ts --json docs/typings.json",
+		"build": "npx tsc --project tsconfig.json",
+		"build:types": "cd apiTypes && npx tsc --project tsconfig.json",
+		"test": "node test",
+		"lint": "eslint . --ext .ts"
+	}
 }
